Modification pour conserver ce que j'ai fait. Je suis en apprentissage de GitHub.
